--- a/waybar/style.css
+++ b/waybar/style.css
@@ -23,6 +23,23 @@ window#waybar.solo {
 }
 */
 
+.modules-left {
+	border: 2px solid #d1d1d1;
+	border-radius: 6px;
+	background: rgba(80, 80, 80, 0.2);
+}
+
+.modules-right {
+	border: 2px solid #d1d1d1;
+	border-radius: 6px;
+	background: rgba(80, 80, 80, 0.2);
+}
+
+.modules-center {
+	border: 2px solid #d1d1d1;
+	border-radius: 6px;
+	background: rgba(80, 80, 80, 0.2);
+}
 
 
 button {
@@ -40,14 +57,14 @@ button:hover {
 
 tooltip {
 	background: rgba(0, 0, 0, 0.7);
-	border: solid 2px white;
-	border-radius: 6px;
+	/* border: solid 2px white; */
+	/* border-radius: 6px; */
 }
 
 menu {
-	background: rgba(80, 80, 80, 0.2);
-	border: solid 2px white;
-	border-radius: 6px;
+	/* background: rgba(80, 80, 80, 0.2); */
+	/* border: solid 2px white; */
+	/* border-radius: 6px; */
 }
 
 /* you can set a style on hover for any module like this */
@@ -55,9 +72,9 @@ menu {
 	padding-left: 6px;
 	padding-right: 9px;
 	color: white;
-	background-color: rgba(80, 80, 80, 0.1);
-	border-radius: 6px;
-	border: solid 2px #d1d1d1;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	/* border-radius: 6px; */
+	/* border: solid 2px #d1d1d1; */
 	
 } 
 
@@ -65,18 +82,17 @@ menu {
 	padding: 6px;
 	padding-bottom: 3px;
 	color: white;
-	background-color: rgba(80, 80, 80, 0.1);
-	border-radius: 6px;
-	border: solid 2px #d1d1d1;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	/* border-radius: 6px; */
+	/* border: solid 2px #d1d1d1; */
 }
 
 #tray {
-	background-color: rgba(80, 80, 80, 0.1);
+	/* background-color: rgba(80, 80, 80, 0.1); */
 	padding-left: 6px;
 	padding-right: 6px;
-	background-color: rgba(80, 80, 80, 0.1);
-	border-radius: 6px;
-	border: solid 2px #d1d1d1;
+	/* border-radius: 6px; */
+	/* border: solid 2px #d1d1d1; */
 }
 
 #pulseaudio-slider {
@@ -110,31 +126,33 @@ menu {
 
 #window {
 	all: unset;
-	background-color: rgba(80, 80, 80, 0.1);
-	padding-right: 9px;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	padding-right: 0px;
 	padding-left: 6px;
-	border-radius: 6px;
-	border: solid 2px #d1d1d1;
+	/* border-radius: 6px; */
+	/* border: solid 2px #d1d1d1; */
 }
 
 #hardware {
-	background-color: rgba(80, 80, 80, 0.1);
-	border-radius: 6px;
-	border: solid 2px #d1d1d1;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	/* border-radius: 6px; */
+	/* border: solid 2px #d1d1d1; */
 	padding: 2px;
 }
 
 #audio {
-	background-color: rgba(80, 80, 80, 0.1);
-	border: solid 2px #d1d1d1;
-	border-radius: 6px;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	/* border: solid 2px #d1d1d1; */
+	/* border-radius: 6px; */
 	padding: 6px;
 }
 
 #custom-wlogout {
-	background-color: rgba(80, 80, 80, 0.1);
-	border: solid 2px #d1d1d1;
-	border-radius: 6px;
+	/* background-color: rgba(80, 80, 80, 0.1); */
+	/* border: solid 2px #d1d1d1; */
+	/* border-radius: 6px; */
 	padding: 6px;
 	padding-right: 9px;
 }
+
+
